--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Labrada:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -16,17 +24,18 @@
     <main>
         <section>
             <img src="images/avataaars.svg" alt="Avator Image of Myself">
-            <p>Kendall-Rose</p>
-            <p>Somerville, NJ</p>
-
             <div>
-                <p>I want to...</p>
-                <p>be rich.</p>
+                <p>Kendall-Rose</p>
+                <p>Somerville, NJ</p>
+                <p>I want to... be rich.</p>
             </div>
         </section>
 
     </main>
 
+    <footer>
+        &copy; Kendall-Rose C.
+    </footer>
 </body>
 
 </html>
