Adding hobbies list

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section>
-            <img src="images/avataaars.svg" alt="Avator Image of Myself">
+            <img src="images/avataaars.svg" alt="Avatar Image of Myself">
             <div>
                 <p>Kendall-Rose</p>
                 <p>Somerville, NJ</p>
@@ -31,6 +31,18 @@
             </div>
         </section>
 
+        <section id="hobbies">
+            <h2>Hobbies</h2>
+            <ul>
+                <li>Photography</li>
+                <li>Elden Ring & Souls Games</li>
+                <li>Video Game Development</li>
+                <li>Piano</li>
+                <li>Guitar</li>
+                <li>Singing</li>
+                <li>Ocarina</li>
+            </ul>
+        </section>
     </main>
 
     <footer>
