Adding Photo Gallery

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Web Development 1</h1>
     </header>
     <main>
-        <section>
+        <section id="avatar">
             <img src="images/avataaars.svg" alt="Avatar Image of Myself">
             <div>
                 <p>Kendall-Rose</p>
@@ -42,6 +42,23 @@
                 <li>Singing</li>
                 <li>Ocarina</li>
             </ul>
+        </section>
+
+        <section id="photo-gallery">
+            <h2>Photos</h2>
+            <hr>
+            <figure>
+                <img src="images/Doggo-1-640w.jpg" alt="The cutest dog">
+                <figcaption>Sleepy Doggo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Doggo-2-640w.jpg" alt="The cutest dog again">
+                <figcaption>Happy Doggo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/Doggo-3-640w.jpg" alt="Hungry dog eating pizza">
+                <figcaption>Hungry Doggo</figcaption>
+            </figure>
         </section>
 
         <article id="jekyll-book">
