--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                 <p>Somerville, NJ</p>
                 <p>I want to... be rich.</p>
             </div>
+
+            <div id="video-container">
+                <p>I was very tired...</p>
+                <iframe id="myVideo" width="675" height="1200" src="https://www.youtube.com/embed/iIx0iWuzX0E"
+                    title="I am in spoon debt" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
         </section>
 
         <section id="hobbies">
@@ -100,3 +108,5 @@
 </body>
 
 </html>
+
+<!-- https://youtube.com/shorts/iIx0iWuzX0E?feature=share -->
