--- a/index.html
+++ b/index.html
@@ -20,9 +20,23 @@
     <header>
         <img src="images/logo-96X96.svg" alt="Blue Origami Logo">
         <h1>Web Development 1</h1>
+
+        <nav class="navbar">
+            <div class="logo">
+
+            </div>
+            <div class="navbar-links">
+                <ul>
+                    <li><a href="#bio">Bio</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#lit">Blog</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
     <main>
-        <section id="avatar">
+        <section id="bio">
             <img src="images/avataaars.svg" alt="Avatar Image of Myself">
             <div>
                 <p>Kendall-Rose</p>
@@ -52,7 +66,7 @@
             </ul>
         </section>
 
-        <section id="photo-gallery">
+        <section id="gallery">
             <h2>Photos</h2>
             <hr>
             <figure>
@@ -69,7 +83,7 @@
             </figure>
         </section>
 
-        <article id="jekyll-book">
+        <article id="lit">
             <h2>Dr Jekyll and Mr Hyde</h2>
             <div>
                 <p>“Come,” said the lawyer, “I see you have some good reason, Poole; I see there is something seriously
