--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <nav class="navbar">
             <div class="logo">
-                <img src="images/logo-96X96.svg" alt="Blue Origami Logo">
+                <img src="images/Logo-figma.svg" alt="Logo">
                 <h1>Web Development 1</h1>
             </div>
             <div class="navbar-links">
