updated image gallery

--- a/index.html
+++ b/index.html
@@ -87,18 +87,20 @@
         <section id="gallery">
             <h2>Photos</h2>
             <hr>
-            <figure>
-                <img src="images/Doggo-1-640w.jpg" alt="The cutest dog">
-                <figcaption>Sleepy Doggo</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Doggo-2-640w.jpg" alt="The cutest dog again">
-                <figcaption>Happy Doggo</figcaption>
-            </figure>
-            <figure>
-                <img src="images/Doggo-3-640w.jpg" alt="Hungry dog eating pizza">
-                <figcaption>Hungry Doggo</figcaption>
-            </figure>
+            <div id="gallery-grid">
+                <figure>
+                    <img src="images/Doggo-1-640w.jpg" alt="The cutest dog">
+                    <figcaption>Sleepy Doggo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Doggo-2-640w.jpg" alt="The cutest dog again">
+                    <figcaption>Happy Doggo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Doggo-3-640w.jpg" alt="Hungry dog eating pizza">
+                    <figcaption>Hungry Doggo</figcaption>
+                </figure>
+            </div>
         </section>
 
         <article id="lit">
