Added hamburger menu

--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
             <div class="logo">
                 <img src="images/Logo-figma.svg" alt="Logo">
                 <h1>Web Development 1</h1>
+
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
+            
             <div class="navbar-links">
                 <ul>
                     <li><a href="#bio">Bio</a></li>
@@ -189,6 +196,7 @@
     <footer>
         &copy; Kendall-Rose C.
     </footer>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
